--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,26 +13,24 @@
         android:theme="@style/Theme.AccountBooks"
         tools:targetApi="31">
 
-        <!-- Budget 액티비티를 기본 액티비티로 설정 -->
+        <!-- MainActivity를 기본 액티비티로 설정 -->
         <activity
-            android:name=".Budget"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!-- 기본 액티비티 설정 끝 -->
+
+        <!-- Budget 액티비티는 기본 액티비티로 설정되지 않음 -->
+        <activity
+            android:name=".Budget"
+            android:exported="true" />
 
         <activity
             android:name=".Calendar"
             android:exported="false" />
-
-        <!-- MainActivity는 더 이상 기본 액티비티로 설정되지 않음 -->
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-        </activity>
 
     </application>
 
