--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.AccountBooks"
         tools:targetApi="31">
 
+        <activity
+            android:name=".TransactionAdapter"
+            android:exported="false" />
+
         <!-- MainActivity를 기본 액티비티로 설정 -->
         <activity
             android:name=".MainActivity"
@@ -21,9 +25,8 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity> <!-- 기본 액티비티 설정 끝 -->
 
-        <!-- 다른 액티비티 설정 -->
         <activity
             android:name=".Budget"
             android:exported="true" />
@@ -31,7 +34,6 @@
         <activity
             android:name=".Calendar"
             android:exported="false" />
-
 
     </application>
 
