--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             android:exported="false" />
         <activity
             android:name=".RegisterActivity"
-            android:exported="false" /> <!-- 기본 액티비티 설정 -->
+            android:exported="false" />
+        <!-- 기본 액티비티 설정 -->
         <!-- android:name=".( 파일 선택 ) -->
         <activity
             android:name=".MainActivity"
