--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,20 @@
         android:theme="@style/Theme.AccountBooks"
         tools:targetApi="31">
         <activity
+            android:name=".AddItem"
+            android:exported="false" />
+        <activity
+            android:name=".Calendar"
+            android:exported="false" />
+        <activity
+            android:name=".AddItemActivity"
+            android:exported="false" />
+        <activity
             android:name=".SharedBudgetActivity"
             android:exported="false" />
         <activity
             android:name=".RegisterActivity"
-            android:exported="false" />
-        <!-- 기본 액티비티 설정 -->
+            android:exported="false" /> <!-- 기본 액티비티 설정 -->
         <!-- android:name=".( 파일 선택 ) -->
         <activity
             android:name=".Budget"
@@ -34,11 +42,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="true" />
-        <activity
-            android:name=".Calendar"
-            android:exported="false" />
-
     </application>
-
 
 </manifest>
