--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.AccountBooks"
         tools:targetApi="31">
         <activity
+            android:name="com.example.accountbooks.FriendsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FriendsActivity"
+            android:exported="false" />
+        <activity
             android:name=".AddItem"
             android:exported="false" />
         <activity
