--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,7 @@
         android:theme="@style/Theme.AccountBooks"
         tools:targetApi="31">
         <activity
-            android:name=".FriendsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".AddItem"
+            android:name=".CalendarActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,7 +24,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Calendar"
+            android:name=".AddItem"
+            android:exported="true" />
+        <activity
+            android:name=".FriendsActivity"
             android:exported="false" />
         <activity
             android:name=".AddItemActivity"
@@ -37,8 +37,7 @@
             android:exported="false" />
         <activity
             android:name=".RegisterActivity"
-            android:exported="false" /> <!-- 기본 액티비티 설정 -->
-        <!-- android:name=".( 파일 선택 ) -->
+            android:exported="false" />
         <activity
             android:name=".Budget"
             android:exported="false" />
